src/web_dist/toManual/index.css
body {
  background-color: var(--body-background-color);
  width: 100%;
  margin: 0px;
  overflow-x: hidden;
  overflow-y: auto; }

#app {
  width: 100%;
  color: var(--app-word-color); }
  #app a {
    text-decoration: none;
    color: #00162c; }

.scrollbar > div:last-child {
  width: 6px !important;
  border-radius: 3px !important; }
  .scrollbar > div:last-child div {
    background-color: var(--scrollbar-div-background-color) !important;
    cursor: default !important; }
    .scrollbar > div:last-child div:hover {
      background-color: var(--scrollbar-div-hover-background-color) !important; }
  .scrollbar > div:last-child:hover {
    width: 8px !important;
    border-radius: 4px !important; }

body[style*='user-select: none'] .scrollbar > div:last-child {
  width: 8px !important;
  border-radius: 4px !important; }
  body[style*='user-select: none'] .scrollbar > div:last-child div {
    background-color: var(--scrollbar-div-select-background-color) !important; }

div {
  outline: none; }
  div .support-div {
    width: 48px;
    height: 48px;
    border-radius: 48px;
    background-color: var(--nav-hash-word-color);
    display: inline-block;
    position: fixed;
    left: var(--support-position);
    bottom: 25px; }
    div .support-div:hover {
      cursor: pointer;
      background-color: var(--nav-hash-hover-color); }
    div .support-div:active {
      background-color: var(--nav-hash-press-color); }
    div .support-div .support {
      position: absolute;
      width: 20px;
      height: 21px;
      top: 14px;
      left: 14px; }
    div .support-div .tooltip-wrapper {
      position: absolute;
      visibility: hidden;
      white-space: nowrap;
      right: -15px;
      bottom: -23px;
      background-color: var(--tips-background-color);
      color: var(--nav-hove-word-color);
      max-width: 500px;
      padding: 2px 5px;
      border-radius: 8px;
      border: 1px solid var(--tips-border-color);
      font-family: var(--nav-world-font-family);
      box-shadow: 0px 3px 20px var(--tips-shadow-color); }
    div .support-div .tooltip-wrapper.show {
      visibility: visible; }
  div .store-div {
    width: 48px;
    height: 48px;
    border-radius: 48px;
    background-color: var(--nav-hash-word-color);
    display: inline-block;
    position: fixed;
    left: var(--support-position);
    bottom: 83px;
    z-index: 10;
    visibility: var(--app-store-visibility); }
    div .store-div:hover {
      cursor: pointer;
      background-color: var(--nav-hash-hover-color); }
    div .store-div:active {
      background-color: var(--nav-hash-press-color); }
    div .store-div .store {
      position: absolute;
      width: 20px;
      height: 21px;
      top: 14px;
      left: 14px; }
    div .store-div .tooltip-wrapper {
      position: absolute;
      visibility: hidden;
      white-space: nowrap;
      right: -15px;
      bottom: -23px;
      background-color: var(--tips-background-color);
      color: var(--nav-hove-word-color);
      max-width: 500px;
      padding: 2px 5px;
      border-radius: 8px;
      border: 1px solid var(--tips-border-color);
      font-family: var(--nav-world-font-family);
      box-shadow: 0px 3px 20px var(--tips-shadow-color); }
    div .store-div .tooltip-wrapper.show {
      visibility: visible; }

@charset "UTF-8";
.Triangle, #article .t_center_down::after, #article .t_center_up::after, #article .t_right_down::after, #article .t_right_up::after, #article .t_left_down::after, #article .t_left_up::after {
  content: '';
  position: absolute;
  width: 8px;
  height: 8px;
  transform: rotate(45deg);
  background-color: #FFFFFF;
  z-index: 99; }

#article {
  width: calc(100% - 164px);
  margin: 10px 0px 10px 0px;
  border-radius: 8px;
  user-select: text !important; }
  #article #article_bg {
    margin: 0px 10px 0px 10px;
    background-color: var(--nav-background-color);
    border-radius: 8px; }
    #article #article_bg .read {
      position: absolute;
      width: 90%;
      min-width: 400px;
      max-width: 1024px;
      left: 50%;
      transform: translateX(-50%);
      background-color: transparent;
      font-family: var(--nav-world-font-family);
      margin: 0px;
      padding: 0 8.8%;
      font-size: 0.9rem;
      color: var(--article-read-word-color);
      outline: 0px; }
      #article #article_bg .read .version-info {
        margin-top: 20px;
        border-top: 1px solid var(--index-h2-color);
        padding-top: 10px;
        color: #414d68; }
        #article #article_bg .read .version-info span {
          padding-right: 10px; }
        #article #article_bg .read .version-info a {
          float: right;
          color: #0081FF; }
        #article #article_bg .read .version-info .spanbox {
          display: none; }
      #article #article_bg .read h2 {
        font-weight: normal;
        font-size: 1.5rem;
        color: var(--article-read-h2-word-color);
        margin: 0px;
        padding-top: 23px; }
        #article #article_bg .read h2 + p {
          margin-top: 15px; }
      #article #article_bg .read ul,
      #article #article_bg .read ol {
        margin: 0;
        padding: 0; }
      #article #article_bg .read li {
        margin-left: 2em;
        line-height: 1.8rem; }
      #article #article_bg .read img[src$='svg'] {
        height: 20px;
        vertical-align: middle; }
      #article #article_bg .read img[src$='png'] {
        margin-top: 10px;
        max-width: 99%;
        cursor: pointer; }
        @media screen and (-webkit-min-device-pixel-ratio: 1.25) {
          #article #article_bg .read img[src$='png'] {
            zoom: 2; } }
        @media screen and (-webkit-min-device-pixel-ratio: 1.5) {
          #article #article_bg .read img[src$='png'] {
            zoom: 1; } }
        @media screen and (-webkit-min-device-pixel-ratio: 1.75) {
          #article #article_bg .read img[src$='png'] {
            zoom: 0.66667; } }
/* ... */

